tests/NormalTests/paczka2/big_fuzzy/89379956.err
Error in line 19: cZvEa29B A701 28,23
Error in line 6: vs9bEIe A297 70,9
Error in line 22: vsçbEIe A701 124,4
Error in line 18: VxpEZ A701 56,2
Error in line 17: SLpAu1di S438 55,2
Error in line 34: SLpAu1di A701 46,0
Error in line 35: SLpAu1di A297 65,3
Error in line 25: vs9bEIe A701 11,6
Error in line 37: SLpAu1di S438 98,2
Error in line 41: A701 S542 88,0
Error in line 56: vs9bEIe S438 96,8
Error in line 59: A701 S542 82,6
Error in line 51: kEn6xc S542 7,4
Error in line 66: vs9bEIe A701 64,32
Error in line 57: vs9bEIe A701 89,2
Error in line 72: cZvEa29B A701 1,8
Error in line 84: ISlS6X6YD S542 60,6
Error in line 91: A701 S438 35,8
Error in line 96: VxpEZ S438 136,7
Error in line 105: SLpAu1di S438 11,8
Error in line 100: VxpEZ A701 74,8
Error in line 110: VxpEZ A297 71,9
Error in line 117: vs9bEIe S542 70,43
Error in line 132: SLpAu1di A297 0,16
Error in line 129: ISlS6X6YD S542 83,8
Error in line 113: vs9bEIe S542 17,1
Error in line 134: cZvEa29B S542 1,1
Error in line 157: kEn6xc A701 26,2
Error in line 130: SLpAu1di A297 0,4
Error in line 153: VxpEZ S542 59,4
Error in line 218: ISlS6X6YD S438 5,4
Error in line 223: cZvEa29B A297 B3,8
Error in line 214: VxpEZ A701 230,4
Error in line 230: VxpEZ S542 28,6
Error in line 239: VxpEZ A701 5,8
Error in line 240: VxpEZ S542 34,7
